@@ -129,10 +129,10 @@
 #define LED_EVENT_OFF_SETBITS        ((0) << OFF_SETBITS_SHIFT)
 #define LED_EVENT_OFF_CLRBITS        ((OPEN1788_LED3) << OFF_CLRBITS_SHIFT)
 
-#define LED_IDLE_ON_SETBITS          ((OPEN1788_LED4) << ON_SETBITS_SHIFT)
-#define LED_IDLE_ON_CLRBITS          ((0) << ON_CLRBITS_SHIFT)
-#define LED_IDLE_OFF_SETBITS         ((0) << OFF_SETBITS_SHIFT)
-#define LED_IDLE_OFF_CLRBITS         ((OPEN1788_LED4) << OFF_CLRBITS_SHIFT)
+#define LED_IDLE_ON_SETBITS          ((0) << ON_SETBITS_SHIFT)
+#define LED_IDLE_ON_CLRBITS          ((OPEN1788_LED4) << ON_CLRBITS_SHIFT)
+#define LED_IDLE_OFF_SETBITS         ((OPEN1788_LED4) << OFF_SETBITS_SHIFT)
+#define LED_IDLE_OFF_CLRBITS         ((0) << OFF_CLRBITS_SHIFT)
 
 /* CONFIG_DEBUG_LEDS enables debug output from this file (needs CONFIG_DEBUG
  * with CONFIG_DEBUG_VERBOSE too)
